--- a/ui/sidebar/package.json
+++ b/ui/sidebar/package.json
@@ -6,6 +6,7 @@
   "main": "src/index.ts",
   "dependencies": {
     "@ui/avatar": "workspace:*",
+    "@ui/condition": "workspace:*",
     "@ui/divider": "workspace:*",
     "@ui/icons": "workspace:*",
     "@ui/layout": "workspace:*",
@@ -20,6 +21,7 @@
     "@ui/icons": "workspace:*",
     "framer-motion": "10.16.1",
     "react": "18.3.1",
+    "react-laag": "2.0.5",
     "styled-system": "5.1.5",
     "styled-tools": "1.7.2"
   },
@@ -29,6 +31,7 @@
     "framer-motion": "*",
     "react": "*",
     "react-dom": "*",
+    "react-laag": "*",
     "styled-system": "*",
     "styled-tools": "*"
   }
