--- a/package.json
+++ b/package.json
@@ -6,11 +6,8 @@
     "app/**/*",
     "ui/**/*",
     "globals/**/*",
-    "endpoints/**/*"
+    "api/**/*"
   ],
-  "dependencies": {
-    "@graphql-tools/apollo-engine-loader": "8.0.1"
-  },
   "devDependencies": {
     "@atls/code-service": "0.1.4",
     "@atls/config-eslint": "0.0.12",
