--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,4 +1,7 @@
 packageExtensions:
+  '@graphql-codegen/plugin-helpers@*':
+    dependencies:
+      '@graphql-tools/apollo-engine-loader': '8.0.1'
   glob-promise@*:
     dependencies:
       glob: '7.2.3'
