--- a/app/fragments/app-root-layout/package.json
+++ b/app/fragments/app-root-layout/package.json
@@ -8,7 +8,7 @@
   },
   "main": "src/index.ts",
   "dependencies": {
-    "@globals/privates": "workspace:*",
+    "@globals/environment": "workspace:*",
     "@ui/theme": "workspace:*"
   },
   "devDependencies": {
