--- a/ui/sidebar/package.json
+++ b/ui/sidebar/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "main": "src/index.ts",
   "dependencies": {
+    "@globals/data": "workspace:*",
     "@ui/avatar": "workspace:*",
     "@ui/condition": "workspace:*",
     "@ui/divider": "workspace:*",
