feat(root-layout): render error message; client hook for get error message from queries

--- a/app/fragments/app-root-layout/package.json
+++ b/app/fragments/app-root-layout/package.json
@@ -9,6 +9,7 @@
   "main": "src/index.ts",
   "dependencies": {
     "@globals/environment": "workspace:*",
+    "@ui/error-message": "workspace:*",
     "@ui/theme": "workspace:*"
   },
   "devDependencies": {
