feat(org-page): get data from server; render it

--- a/app/pages/organizations-page/package.json
+++ b/app/pages/organizations-page/package.json
@@ -11,6 +11,7 @@
     "@app/organization-card-fragment": "workspace:*",
     "@app/organization-card-grid-fragment": "workspace:*",
     "@app/theme-selector": "workspace:*",
+    "@globals/data": "workspace:*",
     "@ui/sidebar": "workspace:*"
   },
   "devDependencies": {
