feat(organizations.page): get data -> render data; scroll fix from height to maxHeight

--- a/app/fragments/app-organization-card/package.json
+++ b/app/fragments/app-organization-card/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@app/add-member-to-organization-modal-fragment": "workspace:*",
     "@app/users-modal": "workspace:*",
+    "@globals/interfaces": "workspace:*",
     "@ui/button": "workspace:*",
     "@ui/condition": "workspace:*",
     "@ui/icons": "workspace:*",
