refactor(input): change suggested input to gh search input; change it component in add memeber to org fragment

--- a/ui/input/package.json
+++ b/ui/input/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@atls-ui-parts/input": "0.1.1",
     "@atls-ui-parts/layout": "0.1.1",
+    "@globals/data": "workspace:*",
     "@ui/condition": "workspace:*",
     "@ui/icons": "workspace:*",
     "@ui/image": "workspace:*",
