feat(organizaiton-modal): get and render organization teams

--- a/app/fragments/app-add-member-to-organization-modal/package.json
+++ b/app/fragments/app-add-member-to-organization-modal/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "main": "src/index.ts",
   "dependencies": {
+    "@globals/data": "workspace:*",
     "@ui/button": "workspace:*",
     "@ui/input": "workspace:*",
     "@ui/layout": "workspace:*",
