--- a/globals/data/package.json
+++ b/globals/data/package.json
@@ -12,10 +12,12 @@
     "@graphql-codegen/typescript": "4.0.6",
     "@graphql-codegen/typescript-resolvers": "4.0.6",
     "@graphql-typed-document-node/core": "3.2.0",
+    "@octokit/core": "6.1.2",
     "@octokit/graphql": "8.1.1",
     "graphql": "15.8.0"
   },
   "peerDependencies": {
+    "@octokit/core": "*",
     "@octokit/graphql": "*",
     "graphql": "*",
     "react": "*"
