draft(add-member-to-org-modal): show error on ui; needs refactor

--- a/app/fragments/app-add-member-to-organization-modal/package.json
+++ b/app/fragments/app-add-member-to-organization-modal/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@globals/data": "workspace:*",
     "@ui/button": "workspace:*",
+    "@ui/error-message": "workspace:*",
     "@ui/input": "workspace:*",
     "@ui/layout": "workspace:*",
     "@ui/modal": "workspace:*",
