--- a/app/entrypoints/renderer/src/.env
+++ b/app/entrypoints/renderer/src/.env
@@ -1,3 +1,3 @@
 NEXT_PUBLIC_GH_CLIENT_ID="Ov23li9kGqtVre5AFIeA"
 NEXT_PUBLIC_GH_CLIENT_SECRET="234d7e0689b3f86506133b082896aa95c6fdf341"
-TOKEN_COOKIE_NAME='token'
+NEXT_PUBLIC_TOKEN_COOKIE_NAME='token'
