refactor(gh-search-users-input): add delay to search; needs refactor

--- a/ui/input/package.json
+++ b/ui/input/package.json
@@ -9,6 +9,7 @@
     "@atls-ui-parts/input": "0.1.1",
     "@atls-ui-parts/layout": "0.1.1",
     "@globals/data": "workspace:*",
+    "@globals/helpers": "workspace:*",
     "@ui/condition": "workspace:*",
     "@ui/icons": "workspace:*",
     "@ui/image": "workspace:*",
