--- a/app/fragments/app-add-member-to-organization-modal/package.json
+++ b/app/fragments/app-add-member-to-organization-modal/package.json
@@ -7,6 +7,7 @@
   "main": "src/index.ts",
   "dependencies": {
     "@globals/data": "workspace:*",
+    "@globals/helpers": "workspace:*",
     "@ui/button": "workspace:*",
     "@ui/error-message": "workspace:*",
     "@ui/input": "workspace:*",
@@ -18,7 +19,6 @@
   },
   "devDependencies": {
     "@emotion/react": "11.11.4",
-    "@faker-js/faker": "8.4.1",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
     "react": "18.3.1",
@@ -26,7 +26,6 @@
     "react-intl": "6.6.8"
   },
   "peerDependencies": {
-    "@faker-js/faker": "*",
     "react": "*",
     "react-dom": "*",
     "react-intl": "*"
