--- a/ui/error-message/package.json
+++ b/ui/error-message/package.json
@@ -19,12 +19,14 @@
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "react-error-boundary": "4.0.13"
   },
   "peerDependencies": {
     "@emotion/react": "*",
     "@emotion/styled": "*",
     "react": "*",
-    "react-dom": "*"
+    "react-dom": "*",
+    "react-error-boundary": "*"
   }
 }
