--- a/app/fragments/app-users-modal/package.json
+++ b/app/fragments/app-users-modal/package.json
@@ -2,6 +2,7 @@
   "name": "@app/users-modal",
   "version": "0.0.1",
   "private": true,
+  "license": "BSD-3-Clause",
   "type": "module",
   "exports": {
     ".": "./src/index.ts"
@@ -31,12 +32,14 @@
     "@faker-js/faker": "8.4.1",
     "@types/react": "^18.3.2",
     "@types/react-dom": "18.3.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-intl": "6.6.8"
   },
   "peerDependencies": {
     "@emotion/react": "*",
-    "@faker-js/faker": "*",
     "react": "*",
+    "react-dom": "*",
     "react-intl": "*"
   }
 }
