draft: yarn check; interfaces mostly; needs test

--- a/app/fragments/app-organization-card-grid/package.json
+++ b/app/fragments/app-organization-card-grid/package.json
@@ -12,6 +12,7 @@
     "@app/organization-card-fragment": "workspace:*",
     "@globals/data": "workspace:*",
     "@globals/helpers": "workspace:*",
+    "@globals/interfaces": "workspace:*",
     "@ui/error-message": "workspace:*",
     "@ui/layout": "workspace:*",
     "@ui/theme": "workspace:*"
