--- a/app/fragments/app-add-member-to-organization-modal/package.json
+++ b/app/fragments/app-add-member-to-organization-modal/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@globals/data": "workspace:*",
     "@globals/helpers": "workspace:*",
+    "@globals/interfaces": "workspace:*",
     "@ui/button": "workspace:*",
     "@ui/error-message": "workspace:*",
     "@ui/input": "workspace:*",
