--- a/globals/data/package.json
+++ b/globals/data/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "main": "src/index.ts",
   "scripts": {
-    "generate": "graphql-codegen --config ./src/codegen.ts"
+    "generate": "graphql-codegen-esm --config ./src/codegen.ts"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "5.0.2",
