--- a/ui/input/package.json
+++ b/ui/input/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@emotion/react": "11.11.4",
     "@emotion/styled": "11.11.5",
+    "@octokit/graphql": "8.1.1",
     "@types/styled-system": "^5.1.22",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -35,6 +36,7 @@
   "peerDependencies": {
     "@emotion/react": "*",
     "@emotion/styled": "*",
+    "@octokit/graphql": "*",
     "@types/styled-system": "*",
     "@ui/error-message": "*",
     "react": "*",
