refactor(add-member-to-org-modal): change button to modal button

--- a/app/fragments/app-add-member-to-organization-modal/package.json
+++ b/app/fragments/app-add-member-to-organization-modal/package.json
@@ -9,11 +9,13 @@
   },
   "main": "src/index.ts",
   "dependencies": {
+    "@app/invite-button": "workspace:*",
     "@globals/data": "workspace:*",
     "@globals/helpers": "workspace:*",
     "@globals/interfaces": "workspace:*",
     "@ui/button": "workspace:*",
     "@ui/error-message": "workspace:*",
+    "@ui/icons": "workspace:*",
     "@ui/input": "workspace:*",
     "@ui/layout": "workspace:*",
     "@ui/modal": "workspace:*",
