--- a/ui/toast-notification/package.json
+++ b/ui/toast-notification/package.json
@@ -20,13 +20,13 @@
     "@types/react-dom": "18.3.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-error-boundary": "4.0.13"
+    "styled-tools": "1.7.2"
   },
   "peerDependencies": {
     "@emotion/react": "*",
     "@emotion/styled": "*",
     "react": "*",
     "react-dom": "*",
-    "react-error-boundary": "*"
+    "styled-tools": "*"
   }
 }
