--- a/ui/toast-notification/package.json
+++ b/ui/toast-notification/package.json
@@ -18,15 +18,19 @@
     "@emotion/styled": "11.11.5",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
+    "@types/styled-system": "5.1.22",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "styled-system": "5.1.5",
     "styled-tools": "1.7.2"
   },
   "peerDependencies": {
     "@emotion/react": "*",
     "@emotion/styled": "*",
+    "@types/styled-system": "*",
     "react": "*",
     "react-dom": "*",
+    "styled-system": "*",
     "styled-tools": "*"
   }
 }
