--- a/app/fragments/app-organization-card-grid/package.json
+++ b/app/fragments/app-organization-card-grid/package.json
@@ -12,9 +12,9 @@
     "@app/organization-card-fragment": "workspace:*",
     "@globals/data": "workspace:*",
     "@globals/helpers": "workspace:*",
+    "@store/toast-notification": "workspace:*",
     "@ui/layout": "workspace:*",
-    "@ui/theme": "workspace:*",
-    "@ui/toast-notification": "workspace:*"
+    "@ui/theme": "workspace:*"
   },
   "devDependencies": {
     "@emotion/react": "11.11.4",
