--- a/app/fragments/app-users-modal/package.json
+++ b/app/fragments/app-users-modal/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@globals/data": "workspace:*",
     "@globals/helpers": "workspace:*",
+    "@store/toast-notification": "workspace:*",
     "@ui/avatar": "workspace:*",
     "@ui/button": "workspace:*",
     "@ui/card": "workspace:*",
@@ -23,8 +24,7 @@
     "@ui/modal": "workspace:*",
     "@ui/scroll": "workspace:*",
     "@ui/text": "workspace:*",
-    "@ui/theme": "workspace:*",
-    "@ui/toast-notification": "workspace:*"
+    "@ui/theme": "workspace:*"
   },
   "devDependencies": {
     "@emotion/react": "11.11.4",
