--- a/app/fragments/app-add-member-to-organization-modal/package.json
+++ b/app/fragments/app-add-member-to-organization-modal/package.json
@@ -9,10 +9,11 @@
   },
   "main": "src/index.ts",
   "dependencies": {
-    "@app/github-users-search": "workspace:*",
     "@app/invite-button": "workspace:*",
     "@globals/data": "workspace:*",
     "@globals/helpers": "workspace:*",
+    "@store/select-input": "workspace:*",
+    "@store/toast-notification": "workspace:*",
     "@ui/button": "workspace:*",
     "@ui/icons": "workspace:*",
     "@ui/input": "workspace:*",
@@ -20,8 +21,7 @@
     "@ui/modal": "workspace:*",
     "@ui/switch": "workspace:*",
     "@ui/text": "workspace:*",
-    "@ui/theme": "workspace:*",
-    "@ui/toast-notification": "workspace:*"
+    "@ui/theme": "workspace:*"
   },
   "devDependencies": {
     "@emotion/react": "11.11.4",
@@ -32,6 +32,7 @@
     "react-intl": "6.6.8"
   },
   "peerDependencies": {
+    "@store/select-input": "*",
     "react": "*",
     "react-dom": "*",
     "react-intl": "*"
