--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "license": "BSD 3-Clause",
   "workspaces": [
     "app/**/*",
+    "stores/**/*",
     "ui/**/*",
     "globals/**/*",
     "api/**/*"
