feat(env): add data for smtp

--- a/app/entrypoints/renderer/src/.env
+++ b/app/entrypoints/renderer/src/.env
@@ -5,3 +5,7 @@ NEXT_PUBLIC_INVITE_GH_ORG_NAME='effectivnayarabota1-test-organization'
 NEXT_PUBLIC_INVITE_FIGMA_URL='http://localhost:3000/figma'
 NEXT_PUBLIC_INVITE_DISCORD_URL='http://localhost:3000/discord'
 NEXT_PUBLIC_INVITE_TELEGRAM='http://localhost:3000/telegram'
+SMTP_AUTH_HOST='smtp.ethereal.email'
+SMTP_AUTH_PORT=587
+SMTP_AUTH_USER='gonzalo20@ethereal.email'
+SMTP_AUTH_PASS='d4P4DrQy9QtWuvCe8F'
