refator(invite-member-modal): interfaces; separate gh-auth-hook

--- a/app/fragments/app-invite-member-modal/package.json
+++ b/app/fragments/app-invite-member-modal/package.json
@@ -10,6 +10,8 @@
   "main": "src/index.ts",
   "dependencies": {
     "@app/invite-button": "workspace:*",
+    "@globals/data": "workspace:*",
+    "@globals/helpers": "workspace:*",
     "@stores/toast-notification": "workspace:*",
     "@ui/button": "workspace:*",
     "@ui/icons": "workspace:*",
