--- a/globals/mail/package.json
+++ b/globals/mail/package.json
@@ -7,6 +7,7 @@
   },
   "main": "src/index.ts",
   "devDependencies": {
+    "@types/mjml": "^4",
     "@types/nodemailer": "^6",
     "nodemailer": "6.9.14"
   }
