refactor: organizations and members namings

--- a/app/entrypoints/renderer/package.json
+++ b/app/entrypoints/renderer/package.json
@@ -19,11 +19,11 @@
     "@app/index-page": "workspace:*",
     "@app/loading": "workspace:*",
     "@app/logout-api": "workspace:*",
+    "@app/members-page": "workspace:*",
     "@app/organizations-page": "workspace:*",
     "@app/registration-page": "workspace:*",
     "@app/root-layout": "workspace:*",
     "@app/send-invite-mail-api": "workspace:*",
-    "@app/users-page": "workspace:*",
     "@emotion/react": "11.11.4",
     "@stores/toast-notification": "workspace:*",
     "@types/node": "20.12.12",
