--- a/app/fragments/app-member-cards-grid/package.json
+++ b/app/fragments/app-member-cards-grid/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@app/users-grid",
+  "name": "@app/member-cards-grid",
   "version": "0.0.1",
   "private": true,
   "type": "module",
