draft(member-card): layout in process

--- a/app/fragments/app-member-card/package.json
+++ b/app/fragments/app-member-card/package.json
@@ -12,6 +12,7 @@
     "@ui/button": "workspace:*",
     "@ui/card": "workspace:*",
     "@ui/checkbox": "workspace:*",
+    "@ui/condition": "workspace:*",
     "@ui/divider": "workspace:*",
     "@ui/icons": "workspace:*",
     "@ui/image": "workspace:*",
