feat(member-cards-grid): get member; filter unique

--- a/app/fragments/app-member-cards-grid/package.json
+++ b/app/fragments/app-member-cards-grid/package.json
@@ -8,6 +8,10 @@
   },
   "main": "src/index.ts",
   "dependencies": {
+    "@app/member-card": "workspace:*",
+    "@globals/data": "workspace:*",
+    "@globals/helpers": "workspace:*",
+    "@stores/toast-notification": "workspace:*",
     "@ui/layout": "workspace:*",
     "@ui/theme": "workspace:*"
   },
