refactor(org-card): package rename

--- a/app/fragments/app-organization-card/package.json
+++ b/app/fragments/app-organization-card/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@app/organization-card-fragment",
+  "name": "@app/organization-card",
   "version": "0.0.1",
   "private": true,
   "license": "BSD-3-Clause",
