refactor(org-cards-grid): raname component; rename functions components

--- a/app/fragments/app-organization-cards-grid/package.json
+++ b/app/fragments/app-organization-cards-grid/package.json
@@ -9,7 +9,7 @@
   },
   "main": "src/index.ts",
   "dependencies": {
-    "@app/organization-card-fragment": "workspace:*",
+    "@app/organization-card": "workspace:*",
     "@globals/data": "workspace:*",
     "@globals/helpers": "workspace:*",
     "@stores/toast-notification": "workspace:*",
