--- a/ui/progress/package.json
+++ b/ui/progress/package.json
@@ -12,7 +12,9 @@
     "dist"
   ],
   "dependencies": {
-    "@atls-ui-parts/progress": "0.1.1"
+    "@ui/layout": "workspace:*",
+    "@ui/text": "workspace:*",
+    "@ui/theme": "workspace:*"
   },
   "devDependencies": {
     "@emotion/react": "11.11.4",
