refactor(member-cards): interfaces mostly

--- a/app/fragments/app-member-cards-grid/package.json
+++ b/app/fragments/app-member-cards-grid/package.json
@@ -9,6 +9,7 @@
   "main": "src/index.ts",
   "dependencies": {
     "@app/member-card": "workspace:*",
+    "@globals/constants": "workspace:*",
     "@globals/data": "workspace:*",
     "@globals/helpers": "workspace:*",
     "@stores/toast-notification": "workspace:*",
