--- a/app/fragments/app-member-cards-grid/package.json
+++ b/app/fragments/app-member-cards-grid/package.json
@@ -19,7 +19,8 @@
   "devDependencies": {
     "@emotion/react": "11.11.4",
     "@types/react": "^18.3.2",
-    "@types/react-dom": "18.3.0"
+    "@types/react-dom": "18.3.0",
+    "discord.js": "14.15.3"
   },
   "peerDependencies": {
     "@emotion/react": "*",
