draft: third-party-data feature

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,4 +1,7 @@
 packageExtensions:
+  '@discordjs/rest@*':
+    dependencies:
+      'magic-bytes': 'npm:magic-bytes.js@1.10.0'
   '@graphql-codegen/plugin-helpers@*':
     dependencies:
       '@graphql-tools/apollo-engine-loader': '8.0.1'
