--- a/app/fragments/app-member-cards-grid/package.json
+++ b/app/fragments/app-member-cards-grid/package.json
@@ -12,6 +12,7 @@
     "@globals/constants": "workspace:*",
     "@globals/data": "workspace:*",
     "@globals/helpers": "workspace:*",
+    "@globals/third-party-service-data": "workspace:*",
     "@stores/toast-notification": "workspace:*",
     "@ui/layout": "workspace:*",
     "@ui/theme": "workspace:*"
@@ -19,8 +20,7 @@
   "devDependencies": {
     "@emotion/react": "11.11.4",
     "@types/react": "^18.3.2",
-    "@types/react-dom": "18.3.0",
-    "discord.js": "14.15.3"
+    "@types/react-dom": "18.3.0"
   },
   "peerDependencies": {
     "@emotion/react": "*",
