draft: get-discord-members WIP

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,7 +1,10 @@
 packageExtensions:
-  '@discordjs/rest@*':
+  'discord.js@*':
     dependencies:
-      'magic-bytes': 'npm:magic-bytes.js@1.10.0'
+      'zlib-sync': '*'
+  '@discordjs/ws@*':
+    dependencies:
+      'zlib-sync': '*'
   '@graphql-codegen/plugin-helpers@*':
     dependencies:
       '@graphql-tools/apollo-engine-loader': '8.0.1'
