--- a/globals/third-party-service-data/package.json
+++ b/globals/third-party-service-data/package.json
@@ -7,6 +7,14 @@
   },
   "main": "src/index.ts",
   "devDependencies": {
-    "discord.js": "14.15.3"
+    "@types/node": "22.0.0",
+    "discord.js": "14.15.3",
+    "ts-node": "9.1.1",
+    "zlib-sync": "0.1.9"
+  },
+  "peerDependencies": {
+    "@types/node": "*",
+    "ts-node": "*",
+    "zlib-sync": "*"
   }
 }
