refactor(progrss): absolute to text container on progress

--- a/ui/progress/package.json
+++ b/ui/progress/package.json
@@ -12,6 +12,7 @@
     "dist"
   ],
   "dependencies": {
+    "@ui/condition": "workspace:*",
     "@ui/layout": "workspace:*",
     "@ui/text": "workspace:*",
     "@ui/theme": "workspace:*"
