--- a/app/entrypoints/renderer/package.json
+++ b/app/entrypoints/renderer/package.json
@@ -10,8 +10,11 @@
     "start": "node dist/src/index.cjs"
   },
   "dependencies": {
+    "@discordjs/next": "0.1.1-dev.1673526225-a580768.0",
+    "discord.js": "14.15.3",
     "graphql": "16.8.2",
-    "react-intl": "6.6.8"
+    "react-intl": "6.6.8",
+    "zlib-sync": "0.1.9"
   },
   "devDependencies": {
     "@app/base-layout": "workspace:*",
@@ -31,7 +34,8 @@
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
     "@ui/theme": "workspace:*",
-    "next": "14.1.0",
+    "next": "14.2.5",
+    "node-loader": "2.0.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "typescript": "5.2.2"
