--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,10 +1,10 @@
 packageExtensions:
-  'discord.js@*':
+  '@emotion/utils@*':
     dependencies:
-      'zlib-sync': '*'
-  '@discordjs/ws@*':
+      '@emotion/sheet': '*'
+  '@atls-ui-parts/layout@*':
     dependencies:
-      'zlib-sync': '*'
+      '@emotion/react': '*'
   '@graphql-codegen/plugin-helpers@*':
     dependencies:
       '@graphql-tools/apollo-engine-loader': '8.0.1'
