refactor: interfaces mostly

--- a/app/fragments/app-member-card/package.json
+++ b/app/fragments/app-member-card/package.json
@@ -8,6 +8,7 @@
   },
   "main": "src/index.ts",
   "dependencies": {
+    "@app/onbording-condition-element": "workspace:*",
     "@app/organizations-modal": "workspace:*",
     "@globals/constants": "workspace:*",
     "@globals/data": "workspace:*",
