--- a/globals/data/package.json
+++ b/globals/data/package.json
@@ -7,6 +7,7 @@
     "generate": "graphql-codegen-esm --config ./src/codegen.ts"
   },
   "devDependencies": {
+    "@app/onbording-condition-element": "workspace:*",
     "@graphql-codegen/cli": "5.0.2",
     "@graphql-codegen/client-preset": "4.2.4",
     "@graphql-codegen/typescript": "4.0.6",
