--- a/globals/data/package.json
+++ b/globals/data/package.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {
     "@app/onbording-condition-element": "workspace:*",
+    "@globals/helpers": "workspace:*",
     "@graphql-codegen/cli": "5.0.2",
     "@graphql-codegen/client-preset": "4.2.4",
     "@graphql-codegen/typescript": "4.0.6",
@@ -15,6 +16,7 @@
     "@graphql-typed-document-node/core": "3.2.0",
     "@octokit/core": "6.1.2",
     "@octokit/graphql": "8.1.1",
+    "@octokit/types": "13.5.0",
     "graphql": "15.8.0"
   },
   "peerDependencies": {
