--- a/app/fragments/app-member-cards-grid/package.json
+++ b/app/fragments/app-member-cards-grid/package.json
@@ -12,6 +12,7 @@
     "@globals/constants": "workspace:*",
     "@globals/data": "workspace:*",
     "@globals/helpers": "workspace:*",
+    "@globals/third-party": "workspace:*",
     "@stores/toast-notification": "workspace:*",
     "@ui/layout": "workspace:*",
     "@ui/theme": "workspace:*"
