refactor(gh-api): move get token func to third party

--- a/app/api/github-auth-cookie/package.json
+++ b/app/api/github-auth-cookie/package.json
@@ -8,6 +8,6 @@
   },
   "main": "src/index.ts",
   "dependencies": {
-    "@globals/data": "workspace:*"
+    "@globals/third-party": "workspace:*"
   }
 }
