refactor(globals): rename third-party to github-hooks

--- a/app/api/github-auth-cookie/package.json
+++ b/app/api/github-auth-cookie/package.json
@@ -8,6 +8,6 @@
   },
   "main": "src/index.ts",
   "dependencies": {
-    "@globals/third-party": "workspace:*"
+    "@globals/github-hooks": "workspace:*"
   }
 }
