feat(mobile): update .yarnrc.yaml

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -26,4 +26,9 @@ enableGlobalCache: false
 
 preferReuse: true
 
+enableScripts: false
+
+pnpIgnorePatterns:
+  - ./mobile/**
+
 yarnPath: .yarn/releases/yarn-remote.cjs
