--- a/mobile/app/package.json
+++ b/mobile/app/package.json
@@ -48,6 +48,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@emotion/native": "11.11.0",
+    "@emotion/react": "11.11.4",
     "@types/react": "^18.2.45",
     "@types/react-dom": "~18.0.10",
     "typescript": "^5.3.3"
