chore(mobile): update project structure

--- a/mobile/app/tsconfig.json
+++ b/mobile/app/tsconfig.json
@@ -2,5 +2,6 @@
   "compilerOptions": {
     "jsx": "preserve"
   },
+  "include": ["app/**/*", "ui/**/*", "screens/**/*"],
   "extends": "expo/tsconfig.base"
 }
