--- a/mobile/app/package.json
+++ b/mobile/app/package.json
@@ -1,57 +1,35 @@
 {
-  "name": "app",
+  "name": "mobile-app",
   "version": "1.0.0",
   "private": true,
   "main": "expo-router/entry",
+  "workspaces": [
+    "app",
+    "ui/*",
+    "screens/*"
+  ],
   "scripts": {
     "android": "expo start --android",
     "ios": "expo start --ios",
     "start": "expo start",
     "web": "expo start --web"
   },
+  "packageManager": "yarn@4.2.2",
+  "skipLibCheck": true,
   "dependencies": {
-    "@expo/config-plugins": "7.9.2",
-    "@expo/webpack-config": "19.0.1",
-    "@react-native-async-storage/async-storage": "1.24.0",
-    "@react-navigation/bottom-tabs": "6.6.1",
-    "@react-navigation/native": "6.1.18",
-    "@react-navigation/stack": "6.4.1",
     "@types/react": "^18.3.3",
-    "buffer": "6.0.3",
+    "@types/react-native": "^0.73.0",
     "expo": "50.0.21",
-    "expo-auth-session": "5.4.0",
-    "expo-constants": "15.4.6",
-    "expo-device": "5.9.4",
-    "expo-file-system": "16.0.9",
-    "expo-image-picker": "14.7.1",
-    "expo-linking": "6.2.2",
-    "expo-location": "16.5.5",
-    "expo-router": "3.5.24",
-    "expo-secure-store": "12.8.1",
-    "expo-status-bar": "1.11.1",
-    "graphql": "16.10.0",
-    "graphql-request": "6.1.0",
-    "graphql-tag": "2.12.6",
     "react": "18.3.1",
-    "react-dom": "18.3.1",
     "react-native": "0.73.11",
-    "react-native-deck-swiper": "2.0.17",
-    "react-native-flash-message": "0.4.2",
-    "react-native-gesture-handler": "2.14.1",
-    "react-native-reanimated": "3.6.3",
-    "react-native-safe-area-context": "4.14.1",
-    "react-native-screens": "3.29.0",
-    "react-native-switch-selector": "2.3.0",
-    "react-native-url-polyfill": "2.0.0",
-    "react-native-web": "0.19.13",
-    "stream-browserify": "3.0.0"
+    "typescript": "5.2.2"
   },
   "devDependencies": {
     "@babel/core": "7.26.7",
     "@emotion/native": "11.11.0",
     "@emotion/react": "11.14.0",
-    "@types/react": "^18.3.3",
     "@types/react-dom": "18.0.11",
-    "typescript": "5.2.2"
+    "eslint": "^8.0.0",
+    "prettier": "^3.0.0"
   }
 }
