feat(mobile): update project structure

--- a/mobile/app/.yarnrc.yml
+++ b/mobile/app/.yarnrc.yml
@@ -1,4 +1,6 @@
 enableGlobalCache: true
-yarnPath: .yarn
+nmHoistingLimits: workspaces
+
+yarnPath: ../../.yarn/releases/yarn-remote.cjs
 
 nodeLinker: node-modules
