--- a/mobile/app/app/tsconfig.json
+++ b/mobile/app/app/tsconfig.json
@@ -2,5 +2,5 @@
   "compilerOptions": {
     "jsx": "preserve"
   },
-  "include": ["app/**/*", "ui/**/*", "screens/**/*"],
+  "extends": "expo/tsconfig.base"
 }
