--- a/mobile/app/app/package.json
+++ b/mobile/app/app/package.json
@@ -2,7 +2,13 @@
   "name": "app",
   "version": "1.0.0",
   "private": true,
-  "main": "src/index.ts",
+  "main": "expo-router/entry",
+  "scripts": {
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "start": "expo start",
+    "web": "expo start --web"
+  },
   "dependencies": {
     "@expo/config-plugins": "7.9.2",
     "@expo/webpack-config": "19.0.1",
@@ -11,8 +17,9 @@
     "@react-navigation/native": "6.1.18",
     "@react-navigation/stack": "6.4.1",
     "@screens/sign-in": "workspace:*",
-    "@ui/layout": "workspace:*",
+    "@types/react": "^18.3.3",
     "buffer": "6.0.3",
+    "expo": "50.0.21",
     "expo-auth-session": "5.4.0",
     "expo-constants": "15.4.6",
     "expo-device": "5.9.4",
@@ -26,7 +33,9 @@
     "graphql": "16.10.0",
     "graphql-request": "6.1.0",
     "graphql-tag": "2.12.6",
+    "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-native": "0.73.11",
     "react-native-deck-swiper": "2.0.17",
     "react-native-flash-message": "0.4.2",
     "react-native-gesture-handler": "2.14.1",
@@ -37,5 +46,13 @@
     "react-native-url-polyfill": "2.0.0",
     "react-native-web": "0.19.13",
     "stream-browserify": "3.0.0"
+  },
+  "devDependencies": {
+    "@babel/core": "7.26.7",
+    "@emotion/native": "11.11.0",
+    "@emotion/react": "11.14.0",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "18.0.11",
+    "typescript": "5.2.2"
   }
 }
