--- a/mobile/app/screens/sign-in/package.json
+++ b/mobile/app/screens/sign-in/package.json
@@ -5,6 +5,7 @@
   "main": "src/index.ts",
   "devDependencies": {
     "@types/react": "^18.3.3",
+    "@ui/layout": "workspace:*",
     "react-native": "0.73.11"
   },
   "peerDependencies": {
