--- a/mobile/app/app/package.json
+++ b/mobile/app/app/package.json
@@ -16,7 +16,6 @@
     "@react-navigation/bottom-tabs": "6.6.1",
     "@react-navigation/native": "6.1.18",
     "@react-navigation/stack": "6.4.1",
-    "@screens/sign-in": "workspace:*",
     "@types/react": "^18.3.3",
     "buffer": "6.0.3",
     "expo": "50.0.21",
@@ -51,6 +50,8 @@
     "@babel/core": "7.26.7",
     "@emotion/native": "11.11.0",
     "@emotion/react": "11.14.0",
+    "@screens/dashboard": "workspace:*",
+    "@screens/sign-in": "workspace:*",
     "@types/react": "^18.3.3",
     "@types/react-dom": "18.0.11",
     "typescript": "5.2.2"
