--- a/mobile/app/screens/dashboard/package.json
+++ b/mobile/app/screens/dashboard/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.ts",
   "devDependencies": {
     "@types/react": "^18.3.3",
-    "@ui/layout": "workspace:*",
+    "@ui-mobile/layout": "workspace:*",
     "react-native": "0.73.11"
   },
   "peerDependencies": {
