chore(mobile): run formatting

--- a/mobile/app/.yarnrc.yml
+++ b/mobile/app/.yarnrc.yml
@@ -1,6 +1,7 @@
 enableGlobalCache: true
-nmHoistingLimits: workspaces
 
-yarnPath: ../../.yarn/releases/yarn-remote.cjs
+cacheFolder: ../../.yarn/cache
+
+nmHoistingLimits: workspaces
 
 nodeLinker: node-modules
