--- a/mobile/app/tsconfig.json
+++ b/mobile/app/tsconfig.json
@@ -1,6 +1,4 @@
 {
-  "compilerOptions": {
-    "jsx": "preserve"
-  },
   "include": ["app/**/*", "ui/**/*", "screens/**/*"],
+  "exclude": [".idea"]
 }
