--- a/mobile/app/package.json
+++ b/mobile/app/package.json
@@ -7,8 +7,6 @@
     "ui/*",
     "screens/*"
   ],
-  "packageManager": "yarn@4.2.2",
-  "skipLibCheck": true,
   "dependencies": {
     "@types/react": "^18.3.3",
     "@types/react-native": "^0.73.0",
@@ -23,5 +21,7 @@
     "@types/react-dom": "18.0.11",
     "eslint": "^8.0.0",
     "prettier": "^3.0.0"
-  }
+  },
+  "packageManager": "yarn@4.2.2",
+  "skipLibCheck": true
 }
