feat(common): add mobile to workspaces

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -27,6 +27,6 @@ enableGlobalCache: false
 preferReuse: true
 
 pnpIgnorePatterns:
-  - ./mobile/**
+  - ./mobile/app/**
 
 yarnPath: .yarn/releases/yarn-remote.cjs
