--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "ui/**/*",
     "globals/**/*",
     "api/**/*",
-    "mobile/**/*"
+    "mobile/**"
   ],
   "devDependencies": {
     "@atls/code-service": "0.1.4",
