refactor(mobile): structure

--- a/mobile/app/tsconfig.json
+++ b/mobile/app/tsconfig.json
@@ -1,4 +1,10 @@
 {
-  "include": ["app/**/*", "ui/**/*", "screens/**/*"],
-  "exclude": [".idea"]
+  "compilerOptions": {
+    "jsx": "preserve"
+  },
+  "paths": {
+    "@ui-mobile/*": ["../ui-mobile/*"],
+    "@screens/*": ["../screens/*"]
+  },
+  "extends": "expo/tsconfig.base"
 }
