--- a/mobile/screens/sign-in/package.json
+++ b/mobile/screens/sign-in/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "@screens/dashboard",
+  "name": "@screens/sign-in",
   "version": "0.0.1",
   "private": true,
   "main": "src/index.ts",
-  "devDependencies": {
-    "@types/react": "^18.3.3",
-    "@ui-mobile/layout": "workspace:*",
+  "dependencies": {
     "react-native": "0.73.11"
   },
+  "devDependencies": {
+    "@types/react": "^18.3.3",
+    "@ui-mobile/layout": "workspace:*"
+  },
   "peerDependencies": {
-    "react": "*",
-    "react-native": "*"
+    "react": "*"
   }
 }
