--- a/mobile/ui-mobile/layout/package.json
+++ b/mobile/ui-mobile/layout/package.json
@@ -3,16 +3,17 @@
   "version": "0.0.1",
   "private": true,
   "main": "src/index.ts",
+  "dependencies": {
+    "react-native": "0.73.11"
+  },
   "devDependencies": {
     "@emotion/native": "11.11.0",
     "@emotion/react": "11.14.0",
-    "@types/react": "^18.3.3",
-    "react-native": "0.73.11"
+    "@types/react": "^18.3.3"
   },
   "peerDependencies": {
     "@emotion/native": "*",
     "@emotion/react": "*",
-    "react": "*",
-    "react-native": "*"
+    "react": "*"
   }
 }
