--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -29,4 +29,6 @@ preferReuse: true
 pnpIgnorePatterns:
   - ./mobile/app/**
 
+nmHoistingLimits: workspaces
+
 yarnPath: .yarn/releases/yarn-remote.cjs
