--- a/mobile/app/package.json
+++ b/mobile/app/package.json
@@ -50,7 +50,7 @@
     "@babel/core": "7.26.7",
     "@emotion/native": "11.11.0",
     "@emotion/react": "11.14.0",
-    "@types/react": "^18.3.3",
+    "@types/react": "18.3.3",
     "@types/react-dom": "18.0.11",
     "@types/react-native": "0.73.0",
     "typescript": "5.2.2"
