chore(mobile): update tsconfig

--- a/mobile/app/tsconfig.json
+++ b/mobile/app/tsconfig.json
@@ -1,6 +1,9 @@
 {
   "compilerOptions": {
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "paths": {
+      "@screens/*": ["../screens/*"]
+    }
   },
   "exclude": [".idea", "node_modules"],
   "extends": "expo/tsconfig.base"
