chore(common): launch config

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -28,7 +28,4 @@ globalFolder: ../.yarn/berry
 
 preferReuse: true
 
-pnpIgnorePatterns:
-  - ./mobile/app/**
-
-yarnPath: .yarn/releases/yarn-remote.cjs
+yarnPath: .yarn/releases/yarn-remote.mjs
