chore(common): add pnpIgnorePatterns to .yarnrc.yml

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -29,3 +29,6 @@ globalFolder: ../.yarn/berry
 preferReuse: true
 
 yarnPath: .yarn/releases/yarn-remote.mjs
+
+pnpIgnorePatterns:
+  - ./mobile/app/**
