refactor(common): move ui-mobile to project root

--- a/mobile/app/package.json
+++ b/mobile/app/package.json
@@ -5,7 +5,7 @@
   "main": "expo-router/entry",
   "workspaces": [
     "../screens/**/*",
-    "../ui-mobile/**/*"
+    "../../ui-mobile/**/*"
   ],
   "scripts": {
     "android": "expo start --android",
