--- a/ui/divider/package.json
+++ b/ui/divider/package.json
@@ -18,6 +18,7 @@
     "@emotion/styled": "11.11.5",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
+    "@types/styled-system": "5.1.22",
     "react": "18.3.1",
     "styled-system": "5.1.5",
     "styled-tools": "1.7.2"
