--- a/stores/select-input/package.json
+++ b/stores/select-input/package.json
@@ -11,6 +11,7 @@
     "@ui/input": "workspace:*"
   },
   "devDependencies": {
+    "@types/react": "18.3.3",
     "react": "18.3.1",
     "react-dom": "18.3.1"
   },
