--- a/ui/modal/package.json
+++ b/ui/modal/package.json
@@ -18,6 +18,7 @@
     "@emotion/styled": "11.11.5",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
+    "@types/styled-system": "5.1.22",
     "framer-motion": "10.16.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
