--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@types/eslint": "^8.56.12",
     "@types/jest": "29.5.14",
     "@types/node": "20.17.19",
-    "@types/react": "^18.3.18",
+    "@types/react": "18.3.18",
     "eslint": "8.57.1",
     "husky": "9.1.7",
     "prettier": "3.5.1",
