--- a/ui/switch/package.json
+++ b/ui/switch/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@emotion/react": "11.14.0",
     "@emotion/styled": "11.14.0",
+    "@types/react": "18.3.18",
     "@types/styled-system": "^5.1.23",
     "@ui/icons": "workspace:*",
     "framer-motion": "10.18.0",
