--- a/app/fragments/app-base-layout/package.json
+++ b/app/fragments/app-base-layout/package.json
@@ -19,6 +19,7 @@
     "@emotion/react": "11.14.0",
     "@emotion/styled": "11.14.0",
     "@octokit/graphql": "8.2.1",
+    "@types/react": "18.3.18",
     "react": "18.3.1",
     "react-dom": "18.3.1"
   },
