--- a/app/fragments/app-organization-card/package.json
+++ b/app/fragments/app-organization-card/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@emotion/react": "11.14.0",
     "@emotion/styled": "11.14.0",
+    "@types/react": "18.3.18",
     "@types/styled-system": "5.1.23",
     "react": "18.3.1",
     "react-dom": "18.3.1",
