--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,6 @@
     "target": "ES2022",
     "jsx": "react"
   },
-  "include": ["app/**/*", "ui/**/*", "fragments/**/*", "stores/**/*", "mobile/**/*"],
+  "include": ["app/**/*", "ui/**/*", "fragments/**/*", "stores/**/*", "globals/**/*", "mobile/**/*", "ui-mobile/**/*"],
   "exclude": [".idea"]
 }
