chore(common): update tsconfig.json

--- a/mobile/app/tsconfig.json
+++ b/mobile/app/tsconfig.json
@@ -2,10 +2,7 @@
   "compilerOptions": {
     "jsx": "preserve"
   },
-  "include": [
-    "../screens/**/*",
-    "../../ui-mobile/**/*",
-  ],
+  "include": ["app/**/*","../screens/**/*", "../../ui-mobile/**/*"],
   "exclude": [".idea", "node_modules"],
   "extends": "expo/tsconfig.base"
 }
